fix: exception timestamp